--- a/journal/201911.md
+++ b/journal/201911.md
@@ -17,7 +17,7 @@ The latest RC3 fixes multiple issues discovered since RC1 and RC2. For the list 
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): Performance enhancements, backporting of changes to the v1.5 release, code cleanup.
+[dcrd](https://github.com/decred/dcrd): Performance enhancements and code cleanup.
 
 While v1.5 is awaiting its final release, development is moving towards the [1.6.0](https://github.com/decred/dcrd/milestone/24) milestone.
 
@@ -53,26 +53,15 @@ Frontend redesign for CMS is well underway.
 
 Implementation of [RFP process](https://github.com/decred/politeia/pull/1054) has started.
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): Work started to [enable](https://github.com/decred/dcrstakepool/pull/571) arbitrarily voting on tickets whose voting rights the server has the private key for. { what is this for? }
+[dcrstakepool](https://github.com/decred/dcrstakepool): Work started to [enable](https://github.com/decred/dcrstakepool/pull/571) arbitrarily voting on tickets whose voting rights the server has the private key for. Work continues to implement [per-ticket](https://github.com/decred/dcrstakepool/issues/568) authentication and ticket purchasing to remove user accounts, voting address reuse and the email requirement.
 
-Work continues to implement [per-ticket](https://github.com/decred/dcrstakepool/issues/568) authentication and ticket purchasing to remove user accounts, voting address reuse and the email requirement.
+[dcrpool](https://github.com/decred/dcrpool): Work in progress to add extensive [test coverage](https://github.com/decred/dcrpool/pull/141).
 
-[dcrpool](https://github.com/decred/dcrpool): work in progress to add extensive [test coverage](https://github.com/decred/dcrpool/pull/141).
-
-[dcrlnd](https://github.com/decred/dcrlnd): Bug fixes, improved tests and build infrastructure.
-
-Dockerfile [updated](https://github.com/decred/dcrlnd/pull/56) for dcrlnd.
+[dcrlnd](https://github.com/decred/dcrlnd): Bug fixes, improved tests and build infrastructure. Dockerfile [updated](https://github.com/decred/dcrlnd/pull/56) for dcrlnd.
 
 [cspp](https://github.com/decred/cspp): increased RPC timeout, improved client-server error handling, allowed use of LetsEncrypt staging server.
 
-[dcrdex](https://github.com/decred/dcrdex): Development is hot! New components implemented in November:
-
-- [auth manager](https://github.com/decred/dcrdex/pull/50)
-- [account registrar](https://github.com/decred/dcrdex/pull/58)
-- initial version of [Decred wallet](https://github.com/decred/dcrdex/pull/49) client
-- client [websocket](https://github.com/decred/dcrdex/pull/55) connectivity
-- initial [epoch processing](https://github.com/decred/dcrdex/pull/66) and match storage
-- transitioned to more abstract [coin ID](https://github.com/decred/dcrdex/issues/75) which lays the foundation for supporting more assets
+[dcrdex](https://github.com/decred/dcrdex): Development is hot! New components implemented in November: [auth manager](https://github.com/decred/dcrdex/pull/50), [account registrar](https://github.com/decred/dcrdex/pull/58), initial version of [Decred wallet](https://github.com/decred/dcrdex/pull/49) client, client [websocket](https://github.com/decred/dcrdex/pull/55) connectivity, and initial [epoch processing](https://github.com/decred/dcrdex/pull/66) and match storage, and a transition. The way to identify unspent funds changed from txid/vout to more abstract [coin ID](https://github.com/decred/dcrdex/issues/75) to possibly support non-UTXO-based assets in the future.
 
 [dcrandroid](https://github.com/decred/dcrandroid): Work continues to add [multi-wallet support](https://github.com/decred/dcrandroid/pull/401).
 
@@ -90,9 +79,9 @@ Work is in progress to show [CSPP mixes](https://github.com/decred/dcrdata/pull/
 
 [docs](https://github.com/decred/dcrdocs): New [privacy guide](https://github.com/decred/dcrdocs/pull/1029), overhaul of [governance overview](https://github.com/decred/dcrdocs/pull/1030), links to new [devdocs](https://github.com/decred/dcrdocs/pull/1017), minor updates and cleanup.
 
-[decred.org](https://github.com/decred/dcrweb): Minor updates, cleanup.
+[decred.org](https://github.com/decred/dcrweb): Minor updates and cleanup.
 
-Cobo custodial wallet was [removed](https://github.com/decred/dcrweb/pull/745), with the view that custodial solutions should not be promoted. The Exchange page was [updated](https://github.com/decred/dcrweb/pull/746) (Nanex, OOOBTC removed).
+Cobo custodial wallet was [removed](https://github.com/decred/dcrweb/pull/745), with the view that custodial solutions should not be promoted. The Exchanges page was [updated](https://github.com/decred/dcrweb/pull/746) (Nanex, OOOBTC removed).
 
 Other:
 
