--- a/journal/201911.md
+++ b/journal/201911.md
@@ -95,7 +95,7 @@ Dev activity stats for November: 173 active PRs, 342 master commits, 72K added a
 
 Welcome to new first time contributors with code merged to master: zeoio ([dcrdex](https://github.com/decred/dcrdex/commits?author=zeoio)), githubsands ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=githubsands)), eharris128 ([dcrweb](https://github.com/decred/dcrweb/commits?author=eharris128)).
 
-Two new contributors missed by our detection earlier: neddoz ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=neddoz) since Jun) and quacklabs ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=quacklabs), since Sep). Welcome aboard!
+Two new contributors missed by our detection earlier: neddoz ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=neddoz) since Jun) and quacklabs ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=quacklabs) since Sep). Welcome aboard!
 
 Community stats:
 
@@ -112,7 +112,7 @@ Community stats:
 
 ## Governance
 
-In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,096 DCR and spent 17,889 DCR. Using November's daily average DCR/USD rate of $19.97, this is $281K received and $357K spent. At October's average daily rate of $15.59, the USD figure billed for work completed in that month is $279K. As of Dec 2, Treasury balance is 640,201 DCR, ($12.4 million USD at $19.44).
+In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,096 DCR and spent 17,889 DCR. Using November's daily average DCR/USD rate of $19.97, this is $281K received and $357K spent. At October's average daily rate of $15.59, the USD figure billed for work completed in that month is $279K. As of Dec 2, Treasury balance is 640,201 DCR ($12.4 million USD at $19.44).
 
 There were two new proposals submitted, one for $650 for a DCR version of Point of Sale app [PlusBit](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605), and one by @buck54321 requesting $30,000 for continued development of [TinyDecred](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451). Voting started for both proposals on Dec 3.
 
@@ -120,15 +120,15 @@ The [proposal](https://proposals.decred.org/proposals/5af0ce1cd325be6be39109c275
 
 @richardred produced a [report](https://www.blockcommons.red/publication/mm-tracking-1/) into the DCR order books from mid-October to mid-November, as i2 Trading started making DCR markets in line with their approved [proposal](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9). The additional liquidity is available, although according to the way it has been measured over this timeframe (where price volatility created difficult conditions), it was probably not available with 90% uptime across all exchanges and pairs.
 
-For more in depth coverage of Politeia activity see Politeia Digest [issue 25](https://blockcommons.red/politeia-digest/issue025/).
+For more in-depth coverage of Politeia activity see Politeia Digest [issue 25](https://blockcommons.red/politeia-digest/issue025/).
 
 ## Network
 
 Hashrate: November's hashrate opened at ~442 Ph/s and closed ~381 Ph/s, bottoming at 322 Ph/s and peaking at 571 Ph/s throughout the month. Pool hashrate distribution as of Dec 4: Poolin 35%, UUPool 32%, F2Pool 11.6%, lab.antpool.com 6.8%, BTC.com 2.8%, Luxor 2.3%, Coinmine 0.11%, BeePool 0.10%, suprnova 0.01% and others 9.45% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Staking: 30-day average ticket price was 134.8 DCR (+2.5) per dcrstats.com. The price varied between 123.9-150.4 DCR. Locked amount was 5.29-5.49 million DCR, which corresponded to 49.50-51.15% of the available supply.
+Staking: 30-day average ticket price was 134.8 DCR (+2.5) per dcrstats.com. The price varied between 123.9-150.4 DCR. Locked amount was 5.29-5.49 million DCR, which corresponded to 49.50-51.17% of the available supply.
 
-The ticket price went up to 150.3 DCR. This is the highest it has been since the sdiff algorithm change.
+The ticket price made a new high since the sdiff algorithm change, while the 51.17% is the new all-time high of [stake participation](https://explorer.dcrdata.org/charts?chart=stake-participation).
 
 Another spike of missed votes happened on [Nov 29](https://explorer.dcrdata.org/charts?chart=missed-votes&zoom=k0x6wa44-k3ucpasw&bin=window&axis=time).
 
@@ -140,15 +140,15 @@ On Nov 24 block [400,000](https://www.reddit.com/r/decred/comments/e0yvyb/block_
 
 ## Integrations
 
-Bittrex [added](https://twitter.com/BittrexExchange/status/1194330471385186316) a DCR/USD [pair](https://global.bittrex.com/Market/Index?MarketName=USD-DCR) to their exchange. @jz provided some [context](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$157358651139766wUsaK:decred.org) and explained that i2trading will be providing liquidity.
+Bittrex [added](https://twitter.com/BittrexExchange/status/1194330471385186316) a DCR/USD [pair](https://global.bittrex.com/Market/Index?MarketName=USD-DCR) to their exchange. @jz provided some [context](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$157358651139766wUsaK:decred.org) and explained that i2trading will be providing liquidity on this market.
 
-Abra wallet/exchange [added](https://support.abra.com/hc/en-us/articles/360001777271-We-ve-added-new-cryptocurrencies-) Decred support for both U.S. and international customers. According to [this page](https://www.abra.com/cryptocurrency/investing-guide/) Abra does not hold custody for several largest assets, but DCR is not in the list yet.
+Abra wallet/exchange [added](https://support.abra.com/hc/en-us/articles/360001777271-We-ve-added-new-cryptocurrencies-) Decred support for both U.S. and international customers. According to [this page](https://www.abra.com/cryptocurrency/investing-guide/) Abra does not hold custody for several largest assets, but DCR is not one of them, and is therefore custodied.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 ## Outreach
 
-November featured Decred at a number of high profile events across the world. Many of the same team members from last year returned this year to Web Summit in Lisbon, Portugal, where Decred was one of the only crypto projects to exhibit and speak. @moo31337 represented the crypto industry on a panel titled "Can You Trust Your Bank?", which can be viewed [here](https://vimeo.com/375884648). @Dominic [represented](https://twitter.com/wanbihou/status/1193218449721311233) Decred at the 2019 World Blockchain Conference in Jiaxing, China on November 8.
+November featured Decred at a number of high profile events across the world. Many of the same team members from last year returned this year to Web Summit in Lisbon, Portugal, where Decred was the only cryptocurrency project to exhibit and speak. @moo31337 represented the crypto industry on a panel titled "Can You Trust Your Bank?", which can be viewed [here](https://vimeo.com/375884648). @Dominic [represented](https://twitter.com/wanbihou/status/1193218449721311233) Decred at the 2019 World Blockchain Conference in Jiaxing, China on November 8.
 
 @Dustorf shared drafts of all new decred.org subpages in the #writers room, and after community input, everything has been submitted to EETER for final assembly, testing and publication.
 
@@ -156,7 +156,7 @@ The Decred Assembly featured a [Deep Dive on v1.5 RC1](https://www.youtube.com/w
 
 Ditto's November achievements include 9 pieces of media coverage:
 
-- An op-ed for @jy-p in [Cointelegraph](https://cointelegraph.com/news/secrets-they-missed-at-devcon-what-its-really-like-in-a-working-dao) titled "Secrets They Missed at DevCon: What It’s Really Like in a Working DAO".
+- An op-ed for @jy-p in [Cointelegraph](https://cointelegraph.com/news/secrets-they-missed-at-devcon-what-its-really-like-in-a-working-dao) titled "Secrets They Missed at DevCon: What It's Really Like in a Working DAO".
 - [A podcast](https://podcasts.apple.com/us/podcast/base-layer-episode-086-jake-yocom-piatt-decred/id1445373535?i=1000457565007) with @jy-p on the Base Layer Podcast with David Nage.
 - [An article](https://www.forbes.com/sites/cbovaird/2019/11/11/who-will-win-the-race-for-digital-currency-supremacy/) in Forbes featuring @jy-p's commentary on the race between governments, corporations, and decentralized cryptocurrencies to remake the financial system.
 - Coordinated [an interview](https://podcasts.apple.com/us/podcast/market-disruptors/id1463411709) for @jy-p on the Market Disruptors podcast.
