--- a/journal/201911.md
+++ b/journal/201911.md
@@ -148,7 +148,7 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-November featured Decred at a number of high profile events across the world. Many of the same team members from last year returned this year to Web Summit in Lisbon, Portugal, where Decred was the [only](https://twitter.com/NoahPierau/status/1192045467435188224) cryptocurrency project to exhibit and speak. @moo31337 represented the crypto industry on a panel titled "Can You Trust Your Bank?", which can be viewed [here](https://vimeo.com/375884648). @Dominic [represented](https://twitter.com/wanbihou/status/1193218449721311233) Decred at the 2019 World Blockchain Conference in Jiaxing, China on November 8.
+November featured Decred at a number of high profile events across the world. Many of the same team members from last year returned this year to Web Summit in Lisbon, Portugal, where Decred was the [only](https://twitter.com/NoahPierau/status/1192045467435188224) cryptocurrency project with significant physical presence this year. @moo31337 represented the crypto industry on a panel titled "Can You Trust Your Bank?", which can be viewed [here](https://vimeo.com/375884648). @Dominic [represented](https://twitter.com/wanbihou/status/1193218449721311233) Decred at the 2019 World Blockchain Conference in Jiaxing, China on November 8.
 
 @Dustorf shared drafts of all new decred.org subpages in the #writers room, and after community input, everything has been submitted to EETER for final assembly, testing and publication.
 
@@ -187,7 +187,7 @@ Attended:
 - Nov 15 - [Open Banking, Fintech and Blockchain Summit](https://twitter.com/Decred_ES/status/1195025379255144448) in Mexico City, Mexico. @elian was invited to talk about digital identities. During the panel he gave a brief intro to Decred and the importance of security and privacy of personal data, and noted the challenging tradeoff between convenience ("forgot your password?" button) and control provided by self-sovereign identities. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191115-open-banking-summit-mexico-city-mexico.md))
 - Nov 15-16 - [CriptoBlock](https://criptoblock.com.br/) - São Paulo, Brazil. @Rhama and @girino gave talks about Decred. Although the organizers worked hard, only around 250 people attended out of 1,000-1,200 expected, reflecting today's market. Decred was a bronze sponsor.
 - Nov 21 - [Africa Blockchain Summit](https://www.africablockchainsummit.com/agenda.html) - Rabat, Morocco. @arij took the opportunity to discover the point of view of centralized organizations and to represent Decred to a wide variety of people from different backgrounds. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157443668448708migov:decred.org), [photos](https://twitter.com/DecredArabia/status/1197622992806776833))
-- Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. A week later he talked about Decred and the trip at @VOANews ([video](https://www.youtube.com/watch?v=WOqCjQELpao)). ([report](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md))
+- Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. A week later he [talked](https://www.youtube.com/watch?v=WOqCjQELpao) about Decred and the trip at @VOANews. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md))
 - Nov 21 - [Blockchain Conference](https://www.eventbrite.com.ar/e/conferencia-blockchain-tickets-81397410847) - Veracruz, Mexico. The event took place in the largest technology university in the city. @francov\_ and @luisantoniocrag introduced blockchains, Bitcoin and Decred to students and challenged fiat beliefs of a few teachers. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191121-blockchain-and-decred-veracruz-mexico.md))
 - Nov 30 - [Decred Meetup](https://twitter.com/RodgersJabz/status/1194309441774063617) - Kampala, Uganda. @jabz's team introduced the audience of 53 to Decred and its features and gave a practical session showing how to use the wallet. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191130-decred-meetup-kampala-uganda.md)).
 
@@ -233,7 +233,7 @@ Videos:
 - Digit-All episode about Decred with @akinsawyerr ([youtube](https://www.youtube.com/watch?v=4r6z9JZxRRI))
 - Decred Review: Why DCR Deserves Attention! by Coin Bureau ([youtube](https://www.youtube.com/watch?v=elfBK5QBVmo))
 - Why Decred is Overdue for a Coinbase Listing by @Exitus ([youtube](https://www.youtube.com/watch?v=Og3kGX_fYho), discussed on [reddit](https://www.reddit.com/r/decred/comments/dyl6vr/why_decred_is_overdue_for_a_coinbase_listing/))
-- Can You Really Trust Your Bank? ([vimeo](https://vimeo.com/375884648)) - @moo31337 features in a panel at Web Summit. @Exitus made a hilarious meme cut ([youtube](https://www.youtube.com/watch?v=0Bq48X3cO_s))
+- Can You Really Trust Your Bank? ([vimeo](https://vimeo.com/375884648)) - @moo31337 features in a panel at Web Summit. @Exitus made a couple of hilarious meme cuts ([first](https://www.youtube.com/watch?v=0Bq48X3cO_s), [second](https://twitter.com/coveryfire7777/status/1199866746192171010))
 
 Audio:
 
@@ -258,7 +258,7 @@ Selected Twitter highlights:
 - @DCRtheSOV's monthly [recap](https://twitter.com/DCRtheSOV/status/1194480106892185601) of October progress.
 - @karamble's Decred Dashboard for Raspberry Pi [tweet](https://twitter.com/karamblez/status/1197676296240861186) was well received.
 - @dcrstakey is [back](https://twitter.com/dcrstakey/status/1193758944587657216).
-- The #DecredDanceChallenge was [initiated](https://twitter.com/wanbihou/status/1193154668601327617) in China by the robotic dance moves of someone wearing the famous space cowboy jacket. Highlights include: [@Dustorf/Stakey](https://twitter.com/lefebvre_dustin/status/1195107934839230465), [@karamble](https://twitter.com/karamblez/status/1194664973030641664), [@camilolwi](https://twitter.com/Camilolwi/status/1194358146027814912), [@JeonHaWoo2](https://twitter.com/JeonHaWoo2/status/1194389449062469634), [@treyditto](https://twitter.com/treyditto/status/1194351696522158080), [@liz_bagot](https://twitter.com/liz_bagot/status/1194393447035224065), [@elian](https://twitter.com/elianhuesca/status/1196526382970540032), [@Francov99_](https://twitter.com/Francov99_/status/1194410868001382401), [@s_ben](https://twitter.com/zen_bacon/status/1194756298987855872), [@luisantoniocrag](https://twitter.com/luisantoniocrag/status/1194438312678887425) and [@degeri](https://twitter.com/degeri_crypto/status/1194522586417225728).
+- The #DecredDanceChallenge was [initiated](https://twitter.com/wanbihou/status/1193154668601327617) in China by the robotic dance moves of someone wearing the famous space cowboy jacket. Highlights include: [@Dustorf/Stakey](https://twitter.com/lefebvre_dustin/status/1195107934839230465), [@karamble](https://twitter.com/karamblez/status/1194664973030641664), [@Camilolwi](https://twitter.com/Camilolwi/status/1194358146027814912), [@JeonHaWoo2](https://twitter.com/JeonHaWoo2/status/1194389449062469634), [@treyditto](https://twitter.com/treyditto/status/1194351696522158080), [@liz_bagot](https://twitter.com/liz_bagot/status/1194393447035224065), [@elian](https://twitter.com/elianhuesca/status/1196526382970540032), [@Francov99_](https://twitter.com/Francov99_/status/1194410868001382401), [@s_ben](https://twitter.com/zen_bacon/status/1194756298987855872), [@luisantoniocrag](https://twitter.com/luisantoniocrag/status/1194438312678887425) and [@degeri](https://twitter.com/degeri_crypto/status/1194522586417225728).
 - DCRComic's Bring Your Talent, Enjoy the DAO [tweet](https://twitter.com/DCRComic/status/1199325669055979520).
 - @jholdstock [meets](https://twitter.com/JamieHoldstock/status/1192146283835854849) Portuguese Prime Minister.
 - @Checkmate [thread](https://twitter.com/_Checkmatey_/status/1197225489959718913) on Decred security.
@@ -283,7 +283,7 @@ Coinbase published a [post](https://blog.coinbase.com/how-coinbase-views-proof-o
 
 The CEO of MicroBT (maker of Whatsminer D1, one of the current top Decred miners) was [arrested](https://insidebitcoins.com/news/chinese-police-conduct-snap-raid-of-microbt-premises-arrests-ceo/242367) in Shenzhen, China, in relation to a mining patent infringement.
 
-A bug in Zcash implementation [leaked metadata](https://duke.leto.net/2019/10/01/zcash-metadata-leakage-cve-2019-16930.html) and allowed an attacker to link IP addresses to Zcash shielded addresses (_missed in Oct_). From the developer who discovered it: "All people who use zaddrs and who have shared zaddrs with 3rd parties. (...) Consider your IP address and geo-location information associated with it as tied to your zaddr." The bug was copied from Bitcoin Core codebase and introduced in Zcash in 2016. The leak was fixed in v2.0.7-3, although the [security announcement](https://z.cash/support/security/announcements/security-announcement-2019-09-24/) just recommended to upgrade immediately without any details. A number of projects inheriting Zcash code are affected as well. This shows that privacy tech is very delicate and requires less error-prone programming approach, extremely thorough review and testing.
+A bug in Zcash implementation [leaked metadata](https://duke.leto.net/2019/10/01/zcash-metadata-leakage-cve-2019-16930.html) and allowed an attacker to link IP addresses to Zcash shielded addresses (_missed in Oct_). From the developer who discovered it: "All people who use zaddrs and who have shared zaddrs with 3rd parties. (...) Consider your IP address and geo-location information associated with it as tied to your zaddr." The bug was copied from Bitcoin Core codebase and introduced in Zcash in 2016. The leak was fixed in v2.0.7-3, although the [security announcement](https://z.cash/support/security/announcements/security-announcement-2019-09-24/) just recommended to upgrade immediately without any details. A number of projects inheriting Zcash code are affected as well. This shows that privacy tech is very delicate and requires simplicity, robust programming approach and extremely thorough review and testing.
 
 The Zcash Foundation and ECC reached [agreement](https://www.zfnd.org/blog/zcash-trademark-resolution/) on how to handle the Zcash trademark. This has been transferred to the Foundation, with an agreement where it shares bilateral power to enforce the mark with ECC. This CoinDesk [article](https://www.coindesk.com/zcash-trademark-talks-were-about-more-than-a-logo) explains how the dispute was about more than a logo, and the power of the trademark holder to effectively decide which chain is Zcash.
 
@@ -309,23 +309,23 @@ EOS New York [tweeted](https://twitter.com/eosnewyork/status/1199813240307568641
 
 The Donuts-on-Ethereum experiment of /r/EthTrader is [transitioning](https://www.reddit.com/r/ethtrader/comments/dwiu4f/donutsonethereum_registration_is_open/) on chain to an Aragon DAO. Subreddit members had 2 weeks to register to claim their donuts, starting from Nov 15. As noted in previous issues, the /r/EthTrader community has already fragmented over the way the decentralization of donuts is being handled.
 
-Justin Sun of Tron [revealed](https://www.coindesk.com/despite-denials-tron-founder-confirms-investment-in-poloniex-crypto-exchange) that he is part of an investor group that bought the Poloniex exchange. Mid-November Poloniex listed TRX and started a "deposit competition" with TRX and later [TRC20-USDT](https://support.poloniex.circle.com/hc/en-us/articles/360035962012-Poloniex-x-TRC20-USDT-Rush-Campaign-Information). Later in the month it was [announced](https://www.theblockcrypto.com/post/48603/poloniex-acquires-tron-based-dex-to-offer-decentralized-trading) that Poloniex had acquired a TRON-based DEX TRXMarket and rebranded to Poloni DEX to offer decentralized trading. A few days later the Poloniex twitter account [tweeted](https://beincrypto.com/poloniex-caught-telling-followers-to-buy-tron-in-deleted-tweet/) "Let's buy #TRON", but this tweet was deleted shortly afterwards.
+Justin Sun of Tron [revealed](https://www.coindesk.com/despite-denials-tron-founder-confirms-investment-in-poloniex-crypto-exchange) that he is part of an investor group that bought the Poloniex exchange. Mid-November Poloniex listed TRX and started a "deposit competition" with TRX and later [TRC20-USDT](https://support.poloniex.circle.com/hc/en-us/articles/360035962012-Poloniex-x-TRC20-USDT-Rush-Campaign-Information). Later in the month it was [announced](https://www.theblockcrypto.com/post/48603/poloniex-acquires-tron-based-dex-to-offer-decentralized-trading) that Poloniex had acquired a TRON-based DEX TRXMarket and rebranded to Poloni DEX to offer decentralized trading. A few days later the Poloniex Twitter account [tweeted](https://beincrypto.com/poloniex-caught-telling-followers-to-buy-tron-in-deleted-tweet/) "Let's buy #TRON", but this tweet was deleted shortly afterwards.
 
 BitMEX unfortunately [leaked](https://www.coindesk.com/bitmex-exchange-exposes-user-base-in-email-mishap) their email database by sending an email to everyone using cc instead of bcc. Oops. This leads to targeting of users, revealing one aspect of their identity to parties with mal-intent.
 
 Korean [OKEx](https://cointelegraph.com/news/cryptocurrency-exchange-okex-delists-xmr-dash-zec-zen-sbtc) and [Upbit](https://cointelegraph.com/news/upbit-exchange-delists-privacy-coins-due-to-money-laundering-concerns) announced delisting of privacy coins such as Monero, Zcash, Dash and others, although delisting of DASH and ZEC was halted for a [review](https://www.coindesk.com/okex-korea-reviewing-decision-to-delist-privacy-coins-zcash-and-dash) on OKEx. (_missed in Sep and Oct_)
 
-Bittrex has [adopted](https://www.coindesk.com/bittrex-chainalysis-kyt) Chainalysis [Know Your Transaction](https://blog.chainalysis.com/reports/real-time-alerts-press-release) software that monitors 15 cryptoassets for suspicious activity in real-time. (_missed in Sep_).
+Bittrex has [adopted](https://www.coindesk.com/bittrex-chainalysis-kyt) Chainalysis [Know Your Transaction](https://blog.chainalysis.com/reports/real-time-alerts-press-release) software that monitors 15 cryptoassets for suspicious activity in real-time. (_missed in Sep_)
 
-CoinDesk was observed with pages not displaying unless javascript and certain browser features were enabled, as evidenced by the [lack of snapshots](https://archive.today/https://www.coindesk.com/*) in Oct and Nov. The reasons to disable javascript are: greatly improved security (not executing tons of random code), privacy (multiple fingerprinting vectors stop working) and performance (pages load extremely fast). Some websites are adopting javascript-only client-side rendering, which has an unfortunate side effect of preventing web archives from taking snapshots. Other crypto sites that are doing this are [Brave New Coin](https://bravenewcoin.com/) and [The Block](https://www.theblockcrypto.com/).
+CoinDesk was observed with pages not displaying unless javascript and certain browser features were enabled, as evidenced by the [lack of snapshots](https://archive.today/https://www.coindesk.com/*) in Oct and Nov. The reasons to disable javascript are: greatly improved security (not executing tons of random code), privacy (multiple fingerprinting vectors stop working) and performance (pages load extremely fast). Some websites are adopting javascript-only client-side rendering, which has an unfortunate side effect of preventing web archives from taking snapshots (and making sites less accountable). Other crypto sites that are doing this are [Brave New Coin](https://bravenewcoin.com/) and [The Block](https://www.theblockcrypto.com/).
 
-U.S. Fed [announced](https://www.newyorkfed.org/markets/opolicy/operating_policy_191114) that they will expand their market interventions by offering 42-day "repos" (loans of sorts), in addition to 1-day and 14-day repos that started in September and purchases of Treasury bills that started in October. If you ever wonder who is getting these loans, you will have to [wait](http://gata.org/node/19583) two years for disclosure.
+U.S. Fed [announced](https://www.newyorkfed.org/markets/opolicy/operating_policy_191114) that they will expand their market interventions by offering 42-day "repos" (loans of sorts), in addition to 1-day and 14-day repos that started in September and "purchases" of Treasury bills that started in October. If you ever wonder who is getting these loans, you will have to wait [two years](http://gata.org/node/19583) for disclosure.
 
-The Fed itself [admitted](https://realinvestmentadvice.com/powells-fantasy-the-economy-should-grow-faster-than-debt/) that U.S. national debt growing faster than the economy is "not sustainable", shortly after the debt [exceeded](https://cointelegraph.com/news/united-states-national-debt-hits-23-trillion-over-1m-per-bitcoin) $23 trillion.
-
-U.S. companies are [stacking up cash](https://www.axios.com/businesses-spending-indicators-recession-533481fc-dba7-4b5c-add4-c11628c335bc.html) to prepare for an economic downturn. A notable quote from the Axios story: "Data from the Investment Company Institute shows that even though the stock market has risen by nearly 25% this year, investors have been net sellers of stocks, pulling $100 billion out of equity funds." A Zero Hedge [article](https://www.zerohedge.com/markets/conundrum-2019-equity-outflows-are-biggest-ever-yet-stocks-are-all-time-highs-what-happens) shows a weird phenomenon of money flowing out of equities yet the prices setting new ATHs. How? Some factors making it possible are the companies themselves being the biggest buyers (stock buybacks), central banks creating money that flows into stocks, paired with a simultaneous decline of trading volume.
+U.S. companies are [stacking up cash](https://www.axios.com/businesses-spending-indicators-recession-533481fc-dba7-4b5c-add4-c11628c335bc.html) to prepare for an economic downturn. A notable quote from the Axios story: "Data from the Investment Company Institute shows that even though the stock market has risen by nearly 25% this year, investors have been net sellers of stocks, pulling $100 billion out of equity funds." A Zero Hedge [article](https://www.zerohedge.com/markets/conundrum-2019-equity-outflows-are-biggest-ever-yet-stocks-are-all-time-highs-what-happens) shows a weird phenomenon of money flowing out of equities yet the prices setting new ATHs. How? Some factors making it possible are the companies themselves being the biggest buyers via stock buybacks, central banks creating money that flows into stocks, paired with a simultaneous decline of trading volume.
 
 The "fun" part in these dynamics where investors are [moving to cash](https://www.bloomberg.com/news/articles/2019-11-12/world-s-rich-readying-for-major-stock-sell-off-ubs-wealth-says) is that while it saves their value from more risky assets and negative interest rates, it will still be diluted by creation of fiat money that is [almost impossible](https://www.home.saxo/en-hk/insights/content-hub/articles/2019/11/20/investing-themes-to-watch-over-the-next-decade) to stop now.
+
+The Fed itself [admitted](https://realinvestmentadvice.com/powells-fantasy-the-economy-should-grow-faster-than-debt/) that U.S. national debt growing faster than the economy is "not sustainable", shortly after the debt [exceeded](https://cointelegraph.com/news/united-states-national-debt-hits-23-trillion-over-1m-per-bitcoin) $23 trillion.
 
 Global debt is hitting all-time highs. The numbers vary by the source: $188 trillion and 230% of the world output figure comes from [IMF chief](https://www.ibtimes.com/global-debt-surges-record-high-188-tn-imf-chief-2861715), while $250 trillion and 320% of world output figure is from [Axios](https://www.axios.com/capital-markets-eye-world-soaring-debt-400f9f37-46b5-45ad-9487-c09ba8958c09.html), which cited the Institute of International Finance.
 
@@ -341,7 +341,7 @@ During October [protests](https://twitter.com/dalalmawad/status/1186705664229466
 
 GitHub has [removed](https://techcrunch.com/2019/10/30/github-removes-tsunami-democratics-apk-after-a-takedown-order-from-spain/) the APK of an app for organizing protests in Catalonia, acting on a court takedown request sent by Spain's national police force.
 
-The CEO of Mongolia-based IDAX exchange has [disappeared](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) together with the keys for the exchange's cold storage. Five days prior to that the exchange announced withdrawal [problems](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) and that it will no longer serve users in [China](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China). This is reminiscent of the case of Canadian QuadrigaCX whose keys also mysteriously disappeared along with the CEO. The takeaways here are: have several backup people with the keys if you run an important service, screen your exchange and ideally, contribute to replacing custodial exchanges with [non-custodial](https://github.com/decred/dcrdex) ones.
+The CEO of Mongolia-based IDAX exchange has [disappeared](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) together with the keys for the exchange's cold storage. Five days prior to that the exchange announced withdrawal [problems](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) and that it will no longer serve users in [China](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China). This is reminiscent of the case of Canadian QuadrigaCX whose keys also mysteriously disappeared along with the CEO. The takeaways here are: have several backup people with the keys if you run an important service, screen your exchanges and ideally, contribute to replacing custodial exchanges with [non-custodial](https://github.com/decred/dcrdex) ones.
 
 A trojan-enabled version of Tor browser was [targeting](https://www.welivesecurity.com/2019/10/18/fleecing-onion-trojanized-tor-browser/) Bitcoin users, discovered by ESET. The trojan version was spreading from `tor-browser[.]org` and `torproect[.]org` domains.
 
@@ -364,5 +364,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, Ditto Team, Dustorf, elian, richardred, s\_ben
-- reviews and feedback: akinsawyerr, chappjc, davecgh, lukebp, matheusd, Haon, emiliomann
+- reviews and feedback: akinsawyerr, chappjc, davecgh, kyle, lukebp, matheusd, Haon, emiliomann
 - title image: saender
