Remove punctuation that looks too bad

--- a/journal/201911.md
+++ b/journal/201911.md
@@ -297,7 +297,7 @@ Aragon Court [launched](https://blog.aragon.org/aragon-court-is-live-on-mainnet/
 
 Dragonfly Research published an [article](https://medium.com/dragonfly-research/breaking-mimblewimble-privacy-model-84bcd67bfe52) about "breaking Mimblewimble's privacy model" by monitoring the network in real time. @jy-p had identified this issue as part of his review of privacy solutions, and subsequently discussed it on the base layer [podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-086-jake-yocom-piatt-decred/). A Grin developer [replied](https://medium.com/grin-mimblewimble/factual-inaccuracies-of-breaking-mimblewimbles-privacy-model-8063371839b9) to the article, stating that it has sensationalized a known limitation and does not constitute an attack.
 
-An "Unknown Fund" was [announced](https://www.unknown.fund/press-release), pledging to invest and donate $75 million in Bitcoin for the startups which directly or indirectly support the idea of anonymity. "Preference will be given to the following niches: protection of personal data, tools for anonymity, cryptocurrency and blockchain". The fund is quite opaque, only saying that "Applications are closed for the Unknown Fund. Evaluation will take a few months.". People are starting to [ask](https://twitter.com/hasufl/status/1202927790082932736) if it may have been a hoax.
+An "Unknown Fund" was [announced](https://www.unknown.fund/press-release), pledging to invest and donate $75 million in Bitcoin for the startups which directly or indirectly support the idea of anonymity. "Preference will be given to the following niches: protection of personal data, tools for anonymity, cryptocurrency and blockchain". The fund is quite opaque, only saying that "Applications are closed for the Unknown Fund. Evaluation will take a few months". People are starting to [ask](https://twitter.com/hasufl/status/1202927790082932736) if it may have been a hoax.
 
 The Stellar Development Foundation (SDF) [announced](https://www.stellar.org/blog/sdfs-next-steps/) that it had [burned](https://www.theblockcrypto.com/linked/45793/the-stellar-foundation-has-burned-over-50-of-the-total-xlm-token-supply-canceling-airdrop-programs) 55 billion XLM, worth over $4.4 billion (notionally), and representing more than 50% of the entirely pre-mined XLM supply. The stated reasons were a belief that the foundation could achieve its aims with less funding, and that the large scale airdrop campaigns were proving ineffective.
 
@@ -331,7 +331,7 @@ Global debt is hitting all-time highs. The numbers vary by the source: $188 tril
 
 Certain physical security providers report an increased [demand](https://www.bloomberg.com/news/articles/2019-11-20/world-s-rich-are-rattled-and-looking-for-old-fashioned-security) for safe deposit boxes to store precious metals, cash and cryptocurrency. The motives cited are fears of a global recession, avoidance of negative interest rates and natural disasters.
 
-Several U.S. organizations acted in concert to "deflate the bitcoin bubble of 2017" according to a CoinDesk [story](https://www.coindesk.com/trump-administration-popped-2017-bitcoin-bubble-ex-cftc-chair-says) _(missed in October)_. "One of the untold stories of the past few years is that the CFTC, the Treasury, the SEC and the \[National Economic Council\] director at the time, Gary Cohn, believed that the launch of bitcoin futures would have the impact of popping the bitcoin bubble. And it worked.". While the move is presented as helping the market by "popping the bubble", giving traders the ability to "express a pessimistic view" even if they _don't own_ the asset, and preventing "believer's market", it somewhat reminds of the smart use of futures [in 1974](http://www.gata.org/node/17081) to increase volatility of gold and discourage people from holding it.
+Several U.S. organizations acted in concert to "deflate the bitcoin bubble of 2017" according to a CoinDesk [story](https://www.coindesk.com/trump-administration-popped-2017-bitcoin-bubble-ex-cftc-chair-says) _(missed in October)_. "One of the untold stories of the past few years is that the CFTC, the Treasury, the SEC and the \[National Economic Council\] director at the time, Gary Cohn, believed that the launch of bitcoin futures would have the impact of popping the bitcoin bubble. And it worked". While the move is presented as helping the market by "popping the bubble", giving traders the ability to "express a pessimistic view" even if they _don't own_ the asset, and preventing "believer's market", it somewhat reminds of the smart use of futures [in 1974](http://www.gata.org/node/17081) to increase volatility of gold and discourage people from holding it.
 
 Czech Central Bank forbids the use of the word "coin" and is [prepared](https://www.bitcoininsider.org/article/77479/czech-central-bank-prepares-fine-calling-physical-bitcoins-coins) to fine a company that is calling physical coins containing Bitcoin paper wallets with 0.1 BTC "mince" ("coin" in Czech).
 
