Events add missed

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -136,6 +136,8 @@ New merchants:
 
 Attended:
 
+- Nov 6 - [Bitcoin & Blockchains Meetup](https://www.facebook.com/events/1444182132424731/) - Oaxaca, Mexico. @evok3d represented Decred. ([photos](https://twitter.com/ev0k3d/status/1192945388329807874), _missed in Nov_)
+
 - {dates} - [{title}]({event link}) - {city}, {country}. {recap}
 
 Upcoming:
