add some ZEC rel ext

--- a/journal/201912.md
+++ b/journal/201912.md
@@ -202,7 +202,57 @@ VTC attack https://cryptobriefing.com/vertcoin-51-attacked-once-again/
 
 {governance, funding, chain forks, community forks, controversy}
 
-https://bitcoinist.com/making-a-dash-for-it-moocowmoo-disappears/
+The results of the Zcash community sentiment polling were [released](https://www.zfnd.org/blog/community-sentiment-collection-results/), reporting results from the community advisory panel, forum users, and the lack of any input from PoW miners who did not signal support for any proposals. Voters could signal support for all 13 proposals by voting Yes/No on each one.
+
+There was very little support for proposals that did not continue to dedicate 20% of the block reward to development funding.
+
+48 of the 62 Community Advisory Panel members responded to the poll. Options #12 (60% split between EFF/Zfnd, 40% to a major grants program with extra advisors) and #10 (The "grand compromise", similar distribution to #12) did well with close to 75% support. Option #13 ("Keep it simple", 50% split ECC/Zfnd) also got >50% approval.
+
+77 forum users (of 104 eligible) voted on the proposals (accounts created after March 2019 were not eligible). #12 did the best among this group with 70% approval, #13 also did well with over 50% support.
+
+1% of all the circulating ZEC [voted](https://twitter.com/zooko/status/1200917828011876352?s=20) in the unofficial stake-weighted poll, the most popular options with this constituency were #10 and #8 (just 2 more years of 20% funding for ECC).
+
+The Zcash Foundation decided to develop option #12 with some improvements, the rolled [back](https://www.zfnd.org/blog/proposed-nu4-zip/) on most of the improvements in response to pushback. The final slightly amended version of the proposal will be put to another community panel and forum user vote to confirm it.
+
+[ZIP 1012](https://github.com/ZcashFoundation/zips/blob/master/zip-1012.rst), as it has become, involves extending the block reward for 4 years at 20%, with 35% going to ECC, 25% to Zfnd, and 40% for additional "Major Grants". Changes to the proposal involve making it more explicitly controlled by Zfnd, and removing a restriction that would have excluded ECC from receiving any funding as part of "major grants". Another change added to the proposal by Zfnd is to "Call for, and incentivize, development of decentralized voting and governance."
+
+
+
+https://www.coindesk.com/zcash-foundation-funds-app-mixing-private-messaging-and-payments
+
+
+
+https://bitcoinist.com/making-a-dash-for-it-moocowmoo-disappears/ {I think the funds subsequently reappeared, will check for link}
+
+https://www.theblockcrypto.com/linked/48976/bitfinex-to-support-deposits-and-withdrawals-on-lightning-network
+
+https://www.coindesk.com/chinas-internet-firewall-has-blocked-access-to-ethereum-block-explorer-etherscan-io
+
+
+
+https://ciphertrace.com/wp-content/uploads/2019/11/CipherTrace-Cryptocurrency-Anti-Money-Laundering-Report-2019-Q3.pdfasasasas
+
+https://keybase.io/a/i/r/d/r/o/p/spacedrop2019
+
+
+
+/r/ethtrader special memberships
+https://twitter.com/carllarson/status/1207452900357746690?s=20
+
+https://www.theblockcrypto.com/post/51059/makerdao-receives-27-5m-from-dragonfly-and-paradigm-to-expand-into-asia
+
+https://twitter.com/brian_armstrong/status/1207818862768480256
+https://tezos.fish/leaderboard
+
+https://github.com/metacartel/MCV/blob/master/Whitepaper.pdf
+
+
+
+Algorand relay nodes voted to [accept](https://algorand.foundation/long-term-vesting-plan-vote-result) an [amendment](https://algorandfoundation.cdn.prismic.io/algorandfoundation/eb2a8c69-2262-42f8-99a4-09df485207b5_EIP-11252019AF_+Conditional+Accelerated+Vesting+Nov+30.pdf) to the vesting schedule of the tokens they received as grants from the Algorand Foundation. This amendment increases the number of Algo tokens relay nodes will receive by 25%, but extends the vesting schedule from 2 to 5 years, with a mechanism to speed it up if the Algo price rises. This concludes an [episode](https://algorand.foundation/voting-procedure-eip09092019pc) which started and was missed in Sep, with relay nodes voting to suspend their own rewards until a change to the vesting schedule could be agreed.
+
+There are around 81 Algorand relay nodes and these proposals were approved with yes votes from around 55 nodes. The Algorand nodes have completed KYC/AML checks and entered into a legal agreement with the foundation, such that part of the voting process for these proposals involved using DocuSign to sign and return copies of the amendment to the Foundation.
+
+
 
 {DEX}
 
